It's the naming issue or encode issue which i've fixed ono every list

--- a/src/better-ui-music.css
+++ b/src/better-ui-music.css
@@ -72,10 +72,13 @@ li{
   
 
 /* For making some basic responsive */
-@media (max-width: 768px) {
+@media (max-width: 1080px) {
+    *{
+        font-size: 25px;
+    }
     #card {
         width: 90%;
-        height: 85%;
+        height: 50%;
     }
     
     #Title {
